Fixing modal visibility

--- a/front-end/game-board/styles/modal.css
+++ b/front-end/game-board/styles/modal.css
@@ -102,6 +102,8 @@
     margin: 15vh 30vw 15vh 30vw;
     z-index: 1000;
     position: fixed;
+
+    visibility: hidden;
     
     background-color: #4d4b4b;
     box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.329);
